# internship-hoaihuynh-training

./: .env.example  .gitignore  README.md  Readme.md  pyproject.toml  requirements.txt
fastapi-house-api/: README.md  requirements.txt
fastapi-house-api/app/: main.py
fastapi-house-api/app/api/: deps.py
fastapi-house-api/app/api/routers/: houses.py  predict.py  users.py
fastapi-house-api/app/core/: config.py
fastapi-house-api/app/models/: __init__.py
fastapi-house-api/app/schemas/: house.py  house_schema.py  predict.py  user.py
fastapi-house-api/scripts/: demo_validation.py
fastapi-house-api/tests/: test_houses.py  test_main.py  test_predict.py  test_users.py
my-project/: main.py  milestone-1-summary.md  project-structure.md  work-log-01.md  work-log-02.md  work-log-03.md
my-project/notebooks/house_prices/: __init__.py  eda-transform.ipynb  eda_correlation_analysis.ipynb  eda_missing_values.ipynb  eda_scaling.ipynb  feature_selection.ipynb  outlier_handing.ipynb
my-project/src/: run_pipeline.py
my-project/src/ml/: __init__.py  eda-data-overview .ipynb  eda-missing-values.ipynb  eda_encoding.ipynb  ex1_skeleton.py  ex2_implement_and_test.py  ex3_final_mypy_fixed.py  house_prices_explore.py  preprocessing.py
my-project/tests/: test_edge_cases.py  test_preprocessing.py  work-log-04.md
prepare-python/: excercice.py  practice-var.py  practice.py  work_log.md
python-type/: README.md  copy-example.py  excercise-data.py  excercise-list.py  excercise.py  type-excercise.py  work-log-02.md
python-type/dict/: copy-example.py  dictionary.py
python-type/list/: excercise-data.py  excercise-list.py  excercise.py
python-type/typing/: compare_type.py  find_house_by_id.py  parse_price.py  type-hint.py  validate_house_record.py
