[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internship-hoaihuynh-training"
version = "0.1.0"
description = "Internship training project for backend and ML integration."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Hoai Huynh" }
]

[tool.setuptools.packages.find]
where = ["my-project/src"]

[tool.pytest.ini_options]
testpaths = ["my-project/tests"]
pythonpath = ["my-project/src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | \.venv-1
  | my-project/notebooks
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".venv",
  ".venv-1",
  "my-project/notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
